added functionality for updating and creating user names
